
#----------------------------------------------------------------------------------------#
#   Add apitest benchmark
#----------------------------------------------------------------------------------------#

message(STATUS "Adding apitest...")
add_subdirectory(apitest)

#----------------------------------------------------------------------------------------#
#   Add broadcast benchmarks
#----------------------------------------------------------------------------------------#

message(STATUS "Adding broadcast...")
add_subdirectory(bcast)

#----------------------------------------------------------------------------------------#
#   Add collectives benchmarks
#----------------------------------------------------------------------------------------#

message(STATUS "Adding collectives...")
add_subdirectory(collectives)

#----------------------------------------------------------------------------------------#
#   Add oneway benchmarks
#----------------------------------------------------------------------------------------#

message(STATUS "Adding oneway...")
add_subdirectory(oneway)

#----------------------------------------------------------------------------------------#
#   Add p2p benchmarks
#----------------------------------------------------------------------------------------#

message(STATUS "Adding p2p...")
add_subdirectory(p2p)